--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,7 +1,7 @@
 <title>RDK</title>
 <meta name="description" content="RDK - React Developer Kit" />
 <meta property="og:site_name" content="RDK" />
-<link rel="canonical" href="https://github.com/jask-oss/rdk"/>
+<link rel="canonical" href="https://github.com/reaviz/rdk"/>
 
 <!-- Bots -->
 <meta name="robots" content="index,follow">
