update storybook, fix stories, fix scroll event on position

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,8 +1,32 @@
 <title>RDK</title>
-<meta name="description" content="RDK - React Developer Kit" />
+<meta name="description" content="RDK - Data visualization library for React based on D3" />
 <meta property="og:site_name" content="RDK" />
-<link rel="canonical" href="https://github.com/reaviz/rdk"/>
+<link rel="canonical" href="https://reaviz.github.io/rdk" />
 
 <!-- Bots -->
 <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
+
+<meta name="msapplication-TileColor" content="#2b5797">
+<meta name="theme-color" content="#22272b">
+
+<style>
+  body {
+    font-family: 'Lato', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.4;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: rgb(51, 51, 51);
+
+    --color-background: rgb(51, 51, 51);
+    --color-on-background:#fff;
+
+    --color-tooltip:rgba(0,5,11,0.9);
+    --color-on-tooltip: #fff;
+
+    --color-handle: #67c2e4;
+    --color-handle-drag: #2c343a;
+  }
+</style>
