--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -8,17 +8,24 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: rgb(51, 51, 51);
-    color: white;
+
     --color-background: rgb(51, 51, 51);
     --color-on-background:#fff;
-    --color-layer-transparent:rgba(0,5,11,0.9);
-    --color-surface:#2c343a;
-    --color-primary:#67c2e4;
-    --color-on-primary:#fff;
-    --color-on-surface:#fff;
+
+    --color-tooltip:rgba(0,5,11,0.9);
+    --color-on-tooltip: #fff;
+
+    --color-handle: #67c2e4;
+    --color-handle-drag: #2c343a;
   }
-  .info__overlay {
-    text-align: left;
-    color: #000;
+  .docblock-source {
+    background: #1b1a1a !important;
+  }
+  svg {
+    overflow: visible;
+  }
+  .doc-story {
+    display: flex;
+    justify-content: center;
   }
 </style>
