fix dialog story

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -20,6 +20,8 @@
     -moz-osx-font-smoothing: grayscale;
     background: rgb(51, 51, 51);
 
+    --color-layer-transparent: rgba(0, 0, 0, .5);
+
     --color-background: rgb(51, 51, 51);
     --color-on-background:#fff;
 
