--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -9,14 +9,13 @@
     -moz-osx-font-smoothing: grayscale;
     background: rgb(51, 51, 51);
 
+    --color-layer-transparent: rgba(0, 0, 0, .5);
+
     --color-background: rgb(51, 51, 51);
     --color-on-background:#fff;
 
     --color-tooltip:rgba(0,5,11,0.9);
     --color-on-tooltip: #fff;
-
-    --color-handle: #67c2e4;
-    --color-handle-drag: #2c343a;
   }
   .docblock-source {
     background: #1b1a1a !important;
